# scu_net_auto_login

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/workflows/: build.yml  build_cli.yml  build_gui.yml
ScuNetAutoLogin/: Directory.Packages.props  ScuNetAutoLogin.slnx
ScuNetAutoLogin/Sal.CLI/: MyCommands.cs  Program.cs  Sal.CLI.csproj
ScuNetAutoLogin/Sal.GUI/: App.axaml  App.axaml.cs  Program.cs  Sal.GUI.csproj  ViewLocator.cs  app.manifest
ScuNetAutoLogin/Sal.GUI/CLICommand/: MyCommands.cs
ScuNetAutoLogin/Sal.GUI/Models/: AccountModel.cs  ConfigModel.cs  ServiceOption.cs
ScuNetAutoLogin/Sal.GUI/Resx/: ResUI.Designer.cs  ResUI.resx  ResUI.zh-Hans.resx
ScuNetAutoLogin/Sal.GUI/ViewModels/: ConfigEditViewModel.cs  LoginViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
ScuNetAutoLogin/Sal.GUI/Views/: ConfigEditView.axaml  ConfigEditView.axaml.cs  LoginView.axaml  LoginView.axaml.cs  MainWindowView.axaml  MainWindowView.axaml.cs
ScuNetAutoLogin/ServiceLib/: ServiceLib.csproj
ScuNetAutoLogin/ServiceLib.Test/: RsaEncryptorTests.cs  ServiceLib.Test.csproj
ScuNetAutoLogin/ServiceLib/Common/: AppJsonContext.cs  EmbedUtils.cs  Global.cs  JsonUtils.cs  LoginConstants.cs  Utils.cs
ScuNetAutoLogin/ServiceLib/Data/: AccountItem.cs  ConfigItem.cs
ScuNetAutoLogin/ServiceLib/Helper/: LegacyCampusRsaEncryptor.cs  PlatformHelper.cs  StartupHelper.cs
ScuNetAutoLogin/ServiceLib/Manager/: AppManager.cs  ConfigManager.cs
ScuNetAutoLogin/ServiceLib/Resource/: HotspotScript
ScuNetAutoLogin/ServiceLib/Resx/: ResStr.Designer.cs  ResStr.resx  ResStr.zh-Hans.resx
ScuNetAutoLogin/ServiceLib/Service/: AutoLoginService.cs  LoginService.cs
cpp/scu_net_auto_login/: CMakeLists.txt  RSAUtils.h
python/: Login.py  RSAEncryptor.py  main.py
src/: AutoTickDevice.cpp  AutoTickDevice.h  BigInt.hpp  Global.cpp  Global.h  Loginer.cpp  Loginer.h  PlatformUtils.cpp  PlatformUtils.h  RSAUtils.cpp  RSAUtils.h  SCUNetLoginApplication.cpp  SCUNetLoginApplication.h  Settings.cpp  Settings.h  User.cpp  User.h  main.cpp
